# bizzi-cloud

./: .env.local.example  .firebaserc  .gitignore  .npmrc  DEPLOYMENT.md  README.md  VERCEL_ENV.md  firebase.json  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json  storage.rules  tailwind.bizzi.preset.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: playwright.yml
cloudflare-worker/: README.md  wrangler.toml
cloudflare-worker/src/: index.ts
desktop/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  vite.config.ts
desktop/electron/: logger.ts  main.ts  preload.ts
desktop/resources/: icon.icns
desktop/scripts/: download-rclone.js  fix-native-deps.js  notarize.js  prepare-file-provider.js
desktop/src/: App.tsx  vite-env.d.ts
docs/: ACCESS_DENIED_DIAGNOSTIC.md  B2_CORS_LUT.md  DEPLOYMENT_COMMANDS.md  DESIGN_REFERENCE.html  DESIGN_REFERENCE.md  ENCRYPTION_ARCHITECTURE.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENCRYPTION_TEST_PLAN.md  GOOGLE_CLOUD_SETUP.md  IDENTITY_SCOPE_LIFECYCLE.md  INCIDENT_RESPONSE.md  KEY_ROTATION.md  PERFORMANCE_RELEASE_FIXES.md  PERSONAL_VS_ENTERPRISE_STORAGE.md  PHASED_ROADMAP.md  PHOTOGRAPHER_GALLERIES.md  README_DESIGN_REFERENCE.md  SECURITY.md  SEO.md  SHARED_FOLDERS.md  UPLOAD_ARCHITECTURE.md  UPLOAD_TEST_PLAN.md  VENDORS.md  delete-lifecycle-storage.md  design-reference-pdf.css  enterprise-launch-checklist.md  fcpbundle-production-qa.md  mount-delete-policy.md  notification-routing-policy.md  uppy-mass-upload-hardening.md  video-gallery-settings-audit.md
email-templates/: README.md  gallery-invite.html  invoice.html  org-purged.html  org-recovery-storage.html  org-removal-member.html  org-removal-owner.html  org-restored.html  org-seat-invite.html  personal-team-invite.html  share-files.html  share-workspace-delivery-request.html  share-workspace.html  signup-link.html  subscription-change-receipt.html  subscription-welcome.html  support-ticket-confirmation.html  support-ticket.html  team-purged.html  team-recovery-storage.html  team-restored.html  transfer-notification.html  waitlist-admin.html  waitlist-client.html
k6/: .env.local.example  README.md  auth-abuse.js  bizzi-api.js  files-browser-load.js  gallery-public-traffic.js  mixed-user-journey.js  notifications-load.js  proofing-abuse.js  rate-limit-verification.js  upload-and-storage-load.js
k6/lib/: env.js  guards.js  http.js  metrics.js  options.js  thresholds.js
native/braw-proxy-cli/: CMakeLists.txt  README.md
native/braw-proxy-cli/scripts/: ffmpeg-braw-wrapper.sh
native/braw-proxy-cli/src/: bmd_decode.cpp  bmd_decode.hpp  main.cpp
public/: CINECOLOR_S-LOG3.cube
public/cloud-bg_files/: ACM+Association+of+Certified+Meteorologists  AMS+Certified+American+Meteorological+Society  Ambassador+WRN  National+Weather+Association  STM+Weather+Experts+-+A+Full-Service+Forensic+Meteorology+FirmSpecializing+in+Weather+Event+Reconstruction  custom.css  js  js(1)  (+9 more)
scripts/: backfill-backup-files-lifecycle.ts  backfill-file-comments.ts  backfill-gallery-media-folder-segment.ts  backfill-linked-drives-folder-model-v2.ts  braw-proxy-worker.mjs  delete-all-mux-assets.ts  delete-user-files.ts  download-ffmpeg-braw.js  firebase-storage-cors.json  k6-with-env.sh  media-worker-http.mjs  metadata-extraction-worker.mjs  migrate-org-files-to-workspaces.ts  migrate-org-shared-drives.ts  migrate-organization-id.ts  migrate-personal-teams.ts  orphan-cleanup.ts  register-paths.js  reset-test-storage.ts  set-b2-cors.mjs  set-firebase-storage-cors.sh  set-user-password.ts  standard-proxy-worker.mjs  sync-subscription.ts  video-poster-frame-worker.mjs  video-poster-upload.mjs
src/: middleware.ts
(+1305 files in other folders)
